--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.539.0",
     "mongodb": "^6.18.0",
     "next": "15.4.5",
     "react": "19.1.0",
